--- a/style.css
+++ b/style.css
@@ -4,19 +4,37 @@
   box-sizing: border-box;
   list-style: none;
 }
-body{
-  background: white;
+body {
+  background-image: url("./images/form bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 .form{
+  margin: 100px 0 0 0 ;
   display: flex;
   justify-content: center;
   align-items: center;
+
+}
+.form label{
+  margin: 5px 0 5px 0;
+  font-size: 15px;
+}
+.form input{
+  border: solid rgb(111, 255, 0) 2px;
+  border-radius: 8px;
+  padding: 10px;
+
 }
 .formbox{
-  background:blue;
+background-color: rgba(0, 0, 0, 0.5);
   padding: 30px 40px;
   display: block;
   max-width: 500px;
+  border:purple 5px solid ;
+  border-radius: 8px;
 }
 .user-info{
   display: flex;
@@ -32,4 +50,10 @@ body{
 }
 h3{
   font-size: 15px;
+}
+.address-line2{
+  display: flex;
+}
+.address-line2 input{
+  margin: 2px;
 }
