--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+ color: white;
 }
 .form label{
   margin: 5px 0 5px 0;
   font-size: 15px;
 }
 .form input{
-  border: solid rgb(111, 255, 0) 2px;
+  border: solid rgb(255, 0, 200) 2px;
   border-radius: 8px;
   padding: 10px;
 
@@ -33,8 +33,41 @@ background-color: rgba(0, 0, 0, 0.5);
   padding: 30px 40px;
   display: block;
   max-width: 500px;
-  border:purple 5px solid ;
   border-radius: 8px;
+  z-index: 1;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.formbox::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 8px;
+  padding: 5px;
+  background: linear-gradient(120deg,
+      purple,
+      violet,
+      magenta,
+      purple);
+  background-size: 300%;
+  animation: shine 4s linear infinite;
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+
+@keyframes shine {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  100% {
+    background-position: 300% 50%;
+  }
 }
 .user-info{
   display: flex;
