--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
     overflow: hidden;
     position: relative;
+    border: 2px solid purple;
 }
 
 /*
