--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   font-size: 30px;
   text-align: center;
   margin: 5px;
-  color: purple;
+  color: rgb(255, 4, 255);
 }
 .location-box {
     text-align: center;
